--- a/app/src/main/res/layout/jh_frag_register.xml
+++ b/app/src/main/res/layout/jh_frag_register.xml
@@ -16,11 +16,11 @@
         android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
-        android:padding="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/activity_horizontal_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -118,7 +118,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/email_sign_in_button"
+            android:id="@+id/id_submit"
             style="?android:textAppearanceSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
