--- a/app/src/main/res/layout/jh_activity_main.xml
+++ b/app/src/main/res/layout/jh_activity_main.xml
@@ -31,7 +31,7 @@
             android:text="ID:123456" />
     </LinearLayout>
 
-    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/holo_red_dark" />
