--- a/app/src/main/res/layout/jh_frag_login.xml
+++ b/app/src/main/res/layout/jh_frag_login.xml
@@ -66,7 +66,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/email_sign_in_button"
+            android:id="@+id/id_submit"
             style="?android:textAppearanceSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -105,7 +105,7 @@
             android:layout_marginTop="100dp"
             android:gravity="center_vertical">
 
-            <view
+            <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
@@ -116,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/jh_msg_three_login" />
 
-            <view
+            <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
