--- a/app/src/main/res/drawable/jh_shape_corner_rectangle_white.xml
+++ b/app/src/main/res/drawable/jh_shape_corner_rectangle_white.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp" />
-    <stroke
+<!--    <stroke
         android:width="1dp"
-        android:color="@android:color/white" />
+        android:color="@android:color/white" />-->
     <solid android:color="@android:color/holo_green_light" />
 </shape>
