--- a/app/src/main/res/layout/jh_frag_login.xml
+++ b/app/src/main/res/layout/jh_frag_login.xml
@@ -82,10 +82,11 @@
             android:padding="4dp">
 
             <TextView
+                android:id="@+id/id_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:text="@string/jh_btn_close" />
+                android:text="@string/jh_btn_register" />
 
             <View
                 android:layout_width="0dp"
@@ -93,10 +94,11 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/id_forget_pwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:text="@string/jh_btn_close" />
+                android:text="@string/jh_btn_forget_pwd" />
         </LinearLayout>
 
         <LinearLayout
