--- a/app/src/main/res/layout/jh_msg_dialog.xml
+++ b/app/src/main/res/layout/jh_msg_dialog.xml
@@ -30,8 +30,6 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:background="@android:color/holo_green_light"
+        android:background="@drawable/jh_shape_corner_rectangle_white"
         android:text="@string/jh_btn_submit" />
 </LinearLayout>
